--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Dalvin Vinoth Kumar | Researcher in Deep Learning & IoT</title>
+    <title>Dharini Shruti Thirukonda | Researcher in Deep Learning & IoT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
@@ -77,19 +77,19 @@
 </head>
 <body>
     <nav class="navbar">
-        <h3>Dr. Dalvin Vinoth Kumar</h3>
+        <h3>Dharini Shruti Thirukonda</h3>
     </nav>
     
     <section class="hero">
-        <h1>Dr. Dalvin Vinoth Kumar</h1>
-        <h2>Researcher in Deep Learning & IoT</h2>
+        <h1>Dharini Shruti Thirukonda</h1>
+        <h2>hello world</h2>
         <a href="#" class="btn">View Research</a>
     </section>
     
     <div class="container">
         <section>
             <h2>About Me</h2>
-            <p>Dedicated researcher specializing in Deep Learning and IoT, with a strong focus on Medical Image Analytics.</p>
+            <p>Christ CBCS MSSM student</p>
         </section>
 
         <section>
